--- a/templates/ajax/game/town/home_foreign.html.twig
+++ b/templates/ajax/game/town/home_foreign.html.twig
@@ -192,7 +192,12 @@
                         </div>
                     </button>
                     {% if has_cremato %}
-                        <button x-disposal-id="{{ constant('App\\Entity\\Citizen::Cooked') }}"><img alt="" src="{{ asset('build/images/item/item_hmeat.gif') }}" />{{ 'Leiche grillen'|trans({},'game') }}</button>
+                        <button x-disposal-id="{{ constant('App\\Entity\\Citizen::Cooked') }}">
+                            <img alt="" src="{{ asset('build/images/item/item_hmeat.gif') }}" />{{ 'Leiche grillen'|trans({},'game') }}
+                            <div class="tooltip help">
+                                {{'Dank des von der Stadt gebauten Kremato-Cue kannst du diese Leiche <strong>in Verpflegung umwandeln</strong>. Aber willst du das wirklich tun?'|trans({}, 'game')|raw}}
+                            </div>
+                        </button>
                     {% endif %}
                     {% if can_devour %}
                         <button x-devour-citizen {% if not allow_devour_corpse %}disabled{% endif %}><img alt="" src="{{ asset('build/images/roles/ghoul.gif') }}" />{{ 'Die Leiche verspeisen!'|trans({},'game') }}</button>
