--- a/templates/ajax/public/et_welcome.html.twig
+++ b/templates/ajax/public/et_welcome.html.twig
@@ -17,11 +17,11 @@
             {% endif %}
 
             {% if current_user is not null or target_user is null %}
-                <div class="row-flex v-center">
-                    <div class="padded cell rw-4">
+                <div class="row-flex v-center wrap">
+                    <div class="padded cell rw-4 rw-md-12">
                         <img alt="" src="{{ asset('build/images/eternal-twin/icon_large.png') }}" class="fit" />
                     </div>
-                    <div class="padded cell rw-8 grow-2 justify">
+                    <div class="padded cell rw-8 grow-2 rw-md-12 justify">
                         {% if current_user is null and target_user is null %}
                             <div class="note">
                                 <strong>{{ 'Hallo %username%!'|trans({'%username%': etwin_user.getDisplayName},'login') }}</strong>
@@ -90,13 +90,13 @@
                     </div>
                 </div>
 
-                <div class="row-flex v-center space">
-                    <div class="cell">
+                <div class="row-flex v-center space wrap">
+                    <div class="cell rw-6 rw-md-12">
                         <a href="" id="et_cancel">
                             {{ 'Abbrechen'|trans({},'login') }}
                         </a>
                     </div>
-                    <div class="cell rw-4">
+                    <div class="cell rw-6 rw-md-12">
                         <button id="et_confirm">
                             {% if current_user is null and target_user is null %}{{ 'Los geht\'s!'|trans({},'login') }}{% endif %}
                             {% if current_user is not null %}{{ 'Verknüpfen'|trans({},'login') }}{% endif %}
