--- a/templates/ajax/ghost/intro.html.twig
+++ b/templates/ajax/ghost/intro.html.twig
@@ -109,23 +109,31 @@
                                 {% if found %}
                                     <div class="row-table">
                                         <div class="row header">
-                                            <div class="padded cell rw-6">{% trans from 'ghost' %}Stadtname{% endtrans %}</div>
-                                            <div class="padded cell rw-2">{% trans from 'game' %}Bürger{% endtrans %}</div>
-                                            <div class="padded cell rw-4">{% trans from 'ghost' %}Aktionen{% endtrans %}</div>
+                                            <div class="padded cell rw-6 hide-sm">{% trans from 'ghost' %}Stadtname{% endtrans %}</div>
+                                            <div class="padded cell rw-2 hide-sm">{% trans from 'game' %}Bürger{% endtrans %}</div>
+                                            <div class="padded cell rw-4 hide-sm">{% trans from 'ghost' %}Aktionen{% endtrans %}</div>
                                         </div>
                                         {% for town in townClass.towns %}
                                             {# @var town \App\Entity\Town #}
                                             {% if town.open and not town.userInTown(app.user) %}
                                                 {% set found = true %}
                                                 <div class="row town-row">
-                                                    <div class="padded cell rw-1"><span class="language"><img src="{{ asset("build/images/lang/" ~ town.getLanguage ~".png") }}" alt="{{ town.getLanguage }}" /></span></div>
-                                                    <div class="padded cell rw-5">{% if town.password is not null or town|whitelisted %}<span><img src="{{ asset('build/images/item/item_lock.gif') }}" alt="Verrouillé" /><div class="tooltip">
-                                                <div>{% if town.password %}{{ 'Diese Stadt ist durch ein Passwort geschützt.'|trans({},'ghost') }}{% endif %}</div>
-                                                <div>{% if town|whitelisted %}{{ 'Für diese Stadt gilt eine Platzreservierung.'|trans({},'ghost') }}{% endif %}</div>
-                                            </div></span>{% endif %} {{ town.getName }}</div>
-                                                    <div class="padded cell rw-2">{{ town.citizens|length }}/{{ town.population }}</div>
-                                                    <div class="padded cell rw-1 center"><img x-town-details="{{ town.id }}" x-town-toggle="{{ town.id }}" class="pointer" alt="+" src="{{ asset('build/images/icons/small_more.gif') }}" /><div class="tooltip help">{{ 'Die Liste der eingeschriebenen Spieler ansehen.'|trans({},'game') }}</div></div>
-                                                    <div class="padded cell rw-3">
+                                                    <div class="padded cell rw-1 rw-sm-2"><span class="language"><img src="{{ asset("build/images/lang/" ~ town.getLanguage ~".png") }}" alt="{{ town.getLanguage }}" /></span></div>
+                                                    <div class="padded cell rw-5">
+                                                        {% if town.password is not null or town|whitelisted %}
+                                                            <span>
+                                                                <img src="{{ asset('build/images/item/item_lock.gif') }}" alt="Verrouillé" />
+                                                                <div class="tooltip">
+                                                                    <div>{% if town.password %}{{ 'Diese Stadt ist durch ein Passwort geschützt.'|trans({},'ghost') }}{% endif %}</div>
+                                                                    <div>{% if town|whitelisted %}{{ 'Für diese Stadt gilt eine Platzreservierung.'|trans({},'ghost') }}{% endif %}</div>
+                                                                </div>
+                                                            </span>
+                                                        {% endif %}
+                                                        {{ town.getName }}
+                                                    </div>
+                                                    <div class="padded cell rw-2 rw-sm-3">{{ town.citizens|length }}/{{ town.population }}</div>
+                                                    <div class="padded cell rw-1 rw-sm-2 center"><img x-town-details="{{ town.id }}" x-town-toggle="{{ town.id }}" class="pointer" alt="+" src="{{ asset('build/images/icons/small_more.gif') }}" /><div class="tooltip help">{{ 'Die Liste der eingeschriebenen Spieler ansehen.'|trans({},'game') }}</div></div>
+                                                    <div class="padded cell rw-3 rw-sm-12">
                                                         {% if cdm_level != 2 %}
                                                             <button {% if joinable and (not town|whitelisted or town|whitelisted(app.user)) %}x-town-lang="{{ town.getLanguage }}" x-town-id="{{ town.id }}" x-town-name="{{ town.getName }}" x-town-locked="{% if town.password is not null %}1{% else %}0{% endif %}" {% else %}disabled="disabled" title="{{ 'Deine Seele genügt den Anforderungen für diesen Stadttypen.'|trans({}, 'ghost') }}"{% endif %}>{% trans from 'ghost' %}Beitreten{% endtrans %}</button>
                                                         {% endif %}
