--- a/templates/ajax/game/log.html.twig
+++ b/templates/ajax/game/log.html.twig
@@ -13,15 +13,11 @@
     {% if day is defined %}
         <div class="log-day-select">
             <div>
-                <div class="tab" x-page-current="{{ day }}" x-page-min="1" x-page-max="{{ day }}">
-                    <div class="control">
-                        <i class="fa fa-arrow-left"></i>
-                    </div>
-                    <div>{{ 'Tag'|trans({}, 'game') }} <span>{{ day }}</span></div>
-                    <div class="control">
-                        <i class="fa fa-arrow-right"></i>
-                    </div>
+                {% for i in day..1 %}
+                <div class="tab {% if day == i %}current{% endif %}" x-day="{{ i }}">
+                    <div>{{ 'Tag'|trans({}, 'game') }} {{ i }}</div>
                 </div>
+                {% endfor %}
             </div>
         </div>
     {% endif %}
